feat(news): implementação de status
